# neural_net

./: MANIFEST.in  README.txt  setup.cfg  setup.py
docs/: NN_sin.py  conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
src/neural_net/: neural_net.py
src/neural_net/test/: test_neural_net.py
