[metadata]
name = neural_net
version = 0.2
summary = neural_net package
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins
download-url = 
author = Caitlin Kavenaugh
author-email = 
maintainer = Kenneth T. Moore
maintainer-email = kenneth-t-mooore-1@nasa.gov
license = 
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
		ffnet
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<2.7
requires-externals = 
project-url = https://github.com/OpenMDAO-Plugins/NeuralNet-Plugin

[openmdao]
copyright = 
static_path = [ '_static' ]
