[metadata]
name = neural_net
version = 0.5
summary = OpenMDAO wrapper for a Feedforward Neural Net surrogate model that can be slotted into the MetaModel component
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/neural_net
download-url = 
author = Caitlin Kavenaugh
author-email = 
maintainer = Kenneth T. Moore
maintainer-email = kenneth-t-mooore-1@nasa.gov
license = GNU General Public License, version 2
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
		ffnet
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = https://github.com/OpenMDAO-Plugins/NeuralNet-Plugin

[openmdao]
copyright = 
static_path = [ '_static' ]
